--- a/bikes/templates/bike_detail.html
+++ b/bikes/templates/bike_detail.html
@@ -79,6 +79,7 @@
       text-decoration: none !important;
     }
   </style>
+  <!-- Card Simples -->
   <div class="bike-card">
       <img src="{{ object.photo.url }}" alt="{{ object.model }} - {{ object.brand }}">
       <h2>{{ object.brand }} {{ object.model }}</h2>
