--- a/bikes/templates/bike_detail.html
+++ b/bikes/templates/bike_detail.html
@@ -79,6 +79,7 @@
       text-decoration: none !important;
     }
   </style>
+
   <!-- Card Simples -->
   <div class="bike-card">
       <img src="{{ object.photo.url }}" alt="{{ object.model }} - {{ object.brand }}">
@@ -87,5 +88,9 @@
       <p><strong>Ano do modelo:</strong> {{ object.model_year }}</p>
       <p><strong>Placa:</strong> {{ object.plate }}</p>
       <p><strong>Preço:</strong> R$ {{ object.value }}</p>
+  </div>
+  <div class="buttons-container">
+    <a href="{% url 'bike_update' pk=object.pk %}" class="btn btn-primay">Editar</a>
+    <a href="{% url 'bike_delete' pk=object.pk %}" class="btn btn-danger">Deletar</a>
   </div>
 {% endblock %}
