--- a/bikes/templates/bike_detail.html
+++ b/bikes/templates/bike_detail.html
@@ -89,4 +89,7 @@
       <p><strong>Placa:</strong> {{ object.plate }}</p>
       <p><strong>Preço:</strong> R$ {{ object.value }}</p>
   </div>
+  <div class="buttons-container">
+    <a href="{% url 'bike_update' pk=object.pk %}" class="btn btn-primary">Editar</a>
+  </div>
 {% endblock %}
