--- a/bikes/templates/bikes.html
+++ b/bikes/templates/bikes.html
@@ -1,5 +1,4 @@
-{% extends "base.html" %} <!-- 
-Essa linha indica que esse modelo faz conexão com modelo básico chamado "base.html" -->
+{% extends "base.html" %}
 
 
 {% block content %}
